# mai_oop_lab6

./: CMakeLists.txt  README.md
include/: fight_logic.hpp  npc.hpp
src/: bear.cpp  fight_logic.cpp  main.cpp  npc.cpp  orc.cpp  squirrel.cpp
